API simulando uma IF(instituição financeira - COMPASS CHALLENGE)
